--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ site
 components/eamxx/site/*
 # Ignore auto-generated eamxx_params.md file
 components/eamxx/docs/common/eamxx_params.md
+
+climsim_scripts
